# django-potencia-tech

./: .env-example  .flake8  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: django.yml
config/: settings.py  settings_test.py  urls.py
students/: admin.py  models.py  serializers.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_rename_age_student_idade_rename_name_student_nome_and_more.py  0003_alter_student_idade_and_more.py
students/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
