[tool.poetry]
name = "django-potencia-tech"
version = "0.1.0"
description = ""
authors = ["Ícaro Abreu <136408366+oicaroabreu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
django = "^4.2.6"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
pytest = "^7.4.3"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
bandit = "^1.7.5"
setuptools = "^68.2.2"
flake8 = "^6.1.0"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
